# innovation-rust

./: .gitignore  Cargo.toml  add_age_1.py  add_age_2_3.py  add_age_3_4_5.py  add_missing_cards.py  analyze_db_errors.py  apply_user_corrections.py  batch_extract_images.py  digitize_cards.py  distribution.txt  extract_images.py  extract_text.py  extracted_cards.json  fix_final_data.py  fix_schema_compliance.py  init_json.py  ocr_test.py  output.txt  populate_cards_1_to_5.py  populate_cards_6_to_10.py  repopulate_4_icons_1_3.py  repopulate_4_icons_4_to_10.py  split_pdfs.py  update_cards_db.py  verification_output.txt  verify_ages.py
data/: cards.json  schema.json
docs/: EXECUTIVE_SUMMARY.md  README_game_analysis.md  game_elements_analysis.md  gameengine.md  regles_fr.md  rules_en.md  text_to_pipeline_guide.md  tui.md
innovation-cli/: Cargo.toml
innovation-cli/src/: main.rs
innovation-core/: Cargo.toml
innovation-core/src/: actions.rs  db.rs  errors.rs  game_state.rs  lib.rs  model.rs  player.rs  state.rs  tests.rs
innovation-core/src/dogma/: actions.rs  conditions.rs  executor.rs  flow.rs  mod.rs  registry.rs  (+1 more)
innovation-core/tests/: dogma_registry.rs
innovation-web/: Cargo.toml  index.html
innovation-web/src/: app.rs  main.rs  state.rs
innovation-web/src/components/: action_bar.rs  game_menu.rs  hand.rs  header.rs  log.rs  mod.rs  pile.rs  player_board.rs
specs/001-game-logic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dogma-effects/: plan.md  spec.md  tasks.md
tests/: age1_registry.rs  test_archerie.rs
(+4 files in other folders)
