[package]
name = "innovation-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
innovation-core = { path = "../innovation-core" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
